use new OPA Buildpack, remove approuter, cleanup